--- a/anime-detail.html
+++ b/anime-detail.html
@@ -243,8 +243,11 @@
   <audio id="gih-ost" loop><source src="https://www.dropbox.com/scl/fi/ks7rvqfmw6lnyisdz07de/dfgdfg.mp3?rlkey=w76qkjl9t2yer2u9xwf8041v8&st=189sbps1&raw=1" type="audio/mpeg"></audio>
   <audio id="gnosia-ost" loop><source src="gnosia.mp3" type="audio/mpeg"></audio>
   <audio id="classroomelite-ost" loop><source src="classroomelite.mp3" type="audio/mpeg"></audio>
-  <audio id="frieren-ost" loop><source src="frieren.mp3" type="audio/mpeg"></audio>
+  <audio id="frieren-ost" loop><source src="frieren.mp3" type="audio/mpeg"></audio>kimitokoete
   <audio id="sololeveling-ost" loop><source src="sololeveling.mp3" type="audio/mpeg"></audio>
+  <audio id="it-ost" loop><source src="it.mp3" type="audio/mpeg"></audio>
+  <audio id="cars-ost" loop><source src="cars.mp3" type="audio/mpeg"></audio>
+  <audio id="kimitokoete-ost" loop><source src="kimitokoete.mp3" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -3971,7 +3974,62 @@
           }
         ]
       },
-
+      69: {
+        title: "Cars",
+        desc: "El aspirante a campeón de carreras Rayo McQueen parece que está a punto de conseguir el éxito. Su actitud arrogante se desvanece cuando llega a una pequeña comunidad olvidada que le enseña las cosas importantes de la vida que había olvidado.",
+        cover: "cars.avif",
+        seasons: [
+          {
+            num: 1,
+	    name: "Película 1",
+            cover: "cars1.avif",
+            eps: [
+              { title: "Película 1"},
+            ]
+          },
+          {
+            num: 2,
+	    name: "Película 2",
+            cover: "cars2.avif",
+            eps: [
+              { title: "Película 2"},
+            ]
+          },
+          {
+            num: 3,
+	    name: "Película 3",
+            cover: "cars3.avif",
+            eps: [
+              { title: "Película 3"},
+            ]
+          }
+        ]
+      },
+      70: {
+        title: "Kimi to Koete Koi ni Naru",
+        desc: "Mari, una estudiante de secundaria, no se imaginaba que se enamoraría de Tsunagu, un amable y sensible hombres bestia, los cuales están segregados tras unos muros. Mari y Tsunagu demuestran que sus diferencias son, en realidad, un puente. ¿Podrá su amor superar la brecha entre ambas especies?",
+        cover: "kimitokoete.avif",
+        seasons: [
+          {
+            num: 1,
+            cover: "kimitokoete1.avif",
+            eps: [
+              { title: "Episodio 1"},
+              { title: "Episodio 2"},
+              { title: "Episodio 3"},
+              { title: "Episodio 4"},
+              { title: "Episodio 5"},
+              { title: "Episodio 6"},
+              { title: "Episodio 7"},
+              { title: "Episodio 8"},
+              { title: "Episodio 9"},
+              { title: "Episodio 10"},
+              { title: "Episodio 11"},
+              { title: "Episodio 12"},
+            ]
+          }
+        ]
+      },
 
 
 
@@ -4189,6 +4247,9 @@
         65: ['classroomelite-ost'],
         66: ['frieren-ost'],
         67: ['sololeveling-ost'],
+        68: ['it-ost'],
+        69: ['cars-ost'],
+        70: ['kimitokoete-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
