--- a/video-player.html
+++ b/video-player.html
@@ -2249,6 +2249,7 @@
           "4": { link:'https://drive.google.com/file/d/1DeZgMNC9P6-614PHPl8EMt6JHP35PONe/preview', title:'My Hero Academia T8 Cap 4' },
           "5": { link:'https://drive.google.com/file/d/1-IiecYCX0Vwb4cub9dMOmhmAEa6evV-s/preview', title:'My Hero Academia T8 Cap 5' },
           "6": { link:'https://drive.google.com/file/d/1WDzq_kVTBOzLad7g9Ai05s4vJrx2LmGq/preview', title:'My Hero Academia T8 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1KypMnxjTPtQD-UhZHnR1dP0wmf4jZP7p/preview', title:'My Hero Academia T8 Cap 7' },
         }
       },
       "52": {
@@ -2315,6 +2316,7 @@
           "18": { link:'https://drive.google.com/file/d/1ga1442E8p8D_lvleGPyHsI3F1XLM0hJp/preview', title:'Futari Solo Camp T1 Cap 18' },
           "19": { link:'https://drive.google.com/file/d/1iNv6CV05PbPX1_S4aFWhiibJE9ovoP8G/preview', title:'Futari Solo Camp T1 Cap 19' },
           "20": { link:'https://drive.google.com/file/d/1sPO8g9lkY2HpCTo6Yy1tgHGiNnLtm4_2/preview', title:'Futari Solo Camp T1 Cap 20' },
+          "21": { link:'https://drive.google.com/file/d/1IZL3j5tPJNVXtNyttkBgR7cQo3ZtWKaP/preview', title:'Futari Solo Camp T1 Cap 21' },
         }
       },
       "54": {
@@ -2327,6 +2329,7 @@
           "6": { link:'https://drive.google.com/file/d/1H0sq3zKrJxnLIAF_MlmuI1-cUAtom07M/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 6' },
           "7": { link:'https://drive.google.com/file/d/1MXYNnpSIKUMuIr1nVgGVi-aM4Z2DA5Pz/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 7' },
           "8": { link:'https://drive.google.com/file/d/1cgwwaDUEhG-QBsXgK5anjCw-pb1T8lTO/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/10jEXAorQKgqzuiksXcst8f40-GBJZe9M/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 9' },
         }
       },
       "55": {
@@ -2487,6 +2490,7 @@
           "6": { link:'https://drive.google.com/file/d/1U5FcxO9X0_iAVY0_J2gwaG3qXEHxODBL/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 6' },
           "7": { link:'https://drive.google.com/file/d/1fbWAiIbXifd_EeWCq-hdxStTNLyGqSiF/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 7' },
           "8": { link:'https://drive.google.com/file/d/1FPkisn_nCXnA_-bFs_D4EZJyscJSppws/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1zjhbUaXk46PODve5MEsFmzzsUlhoofZ_/preview', title:'Akujiki Reijō to Kyōketsu Kōshaku T1 Cap 9' },
         }
       },
       "60": {
@@ -2503,6 +2507,7 @@
           "10": { link:'https://drive.google.com/file/d/12Rrh0xj85a9WUXEZEARqliEsJfd4IW4Y/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 10' },
           "11": { link:'https://drive.google.com/file/d/1FDWj67l-uIUlXy92JDwREtgS4mF-iS2c/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 11' },
           "12": { link:'https://drive.google.com/file/d/1XqpWA9VyHLh8wAKfjQYEitdfczD0Q0gZ/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 12' },
+          "13": { link:'https://drive.google.com/file/d/1gqh3LfEr2y887u165PVvMlmQSWRvFlp-/preview', title:'Saigo ni Hitotsu dake Onegai shitemo Yoroshii deshou ka T1 Cap 13' },
         }
       },
       "61": {
@@ -2713,34 +2718,34 @@
           "12": { link:'https://drive.google.com/file/d/1u9v0Z69--n_PvP9lMouyWLUyE-QFNIky/preview', title:'Classroom of the Elite T1 Cap 12' },
         },
         "2": {
-          "1": { link:'https://drive.google.com/file/d/11AKyJflDeDe5QNuCv9BV_QCoUYe5zI5f/preview', title:'Classroom of the Elite T1 Cap 1' },
-          "2": { link:'https://drive.google.com/file/d/1lESx4bTU4pOHWSXHeNnLo6mfVAJHHkyF/preview', title:'Classroom of the Elite T1 Cap 2' },
-          "3": { link:'https://drive.google.com/file/d/1IJbW32-ONnSYK3lDfRnQfKoM3lx0UptN/preview', title:'Classroom of the Elite T1 Cap 3' },
-          "4": { link:'https://drive.google.com/file/d/18Vv6DuZg5JD-1TJq7DVI4thnZQIB_S1J/preview', title:'Classroom of the Elite T1 Cap 4' },
-          "5": { link:'https://drive.google.com/file/d/1xEIPZjsdoYajHcI1oTXLTZvPbst5v_6b/preview', title:'Classroom of the Elite T1 Cap 5' },
-          "6": { link:'https://drive.google.com/file/d/1inQVUKkSWOXB1dBFN0nMSlicZ5EgYFNW/preview', title:'Classroom of the Elite T1 Cap 6' },
-          "7": { link:'https://drive.google.com/file/d/1jYMWwMy6RrhVBdGNU1F6vHeV77P_55cB/preview', title:'Classroom of the Elite T1 Cap 7' },
-          "8": { link:'https://drive.google.com/file/d/1Ulgo22UkPE2Mb9aNITbwpCPlQCt57aCz/preview', title:'Classroom of the Elite T1 Cap 8' },
-          "9": { link:'https://drive.google.com/file/d/1iy2I219290kDqd3FbPsky0oA6hBqBw-t/preview', title:'Classroom of the Elite T1 Cap 9' },
-          "10": { link:'https://drive.google.com/file/d/1ZHYGhIvRt8c5li2l8mo_03LGE2RIZKff/preview', title:'Classroom of the Elite T1 Cap 10' },
-          "11": { link:'https://drive.google.com/file/d/1_V4cIgofxPLa2NTXqgwAtsBM5dPBnxKs/preview', title:'Classroom of the Elite T1 Cap 11' },
-          "12": { link:'https://drive.google.com/file/d/1-jq3NngpxqcLLJm4RaHe6XWdXcAdXh6d/preview', title:'Classroom of the Elite T1 Cap 12' },
-          "13": { link:'https://drive.google.com/file/d/1V4vMJQksyWyLbbkAkb3vSl-8IrR6BkrD/preview', title:'Classroom of the Elite T1 Cap 13' },
+          "1": { link:'https://drive.google.com/file/d/11AKyJflDeDe5QNuCv9BV_QCoUYe5zI5f/preview', title:'Classroom of the Elite T2 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/1lESx4bTU4pOHWSXHeNnLo6mfVAJHHkyF/preview', title:'Classroom of the Elite T2 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1IJbW32-ONnSYK3lDfRnQfKoM3lx0UptN/preview', title:'Classroom of the Elite T2 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/18Vv6DuZg5JD-1TJq7DVI4thnZQIB_S1J/preview', title:'Classroom of the Elite T2 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1xEIPZjsdoYajHcI1oTXLTZvPbst5v_6b/preview', title:'Classroom of the Elite T2 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1inQVUKkSWOXB1dBFN0nMSlicZ5EgYFNW/preview', title:'Classroom of the Elite T2 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1jYMWwMy6RrhVBdGNU1F6vHeV77P_55cB/preview', title:'Classroom of the Elite T2 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1Ulgo22UkPE2Mb9aNITbwpCPlQCt57aCz/preview', title:'Classroom of the Elite T2 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1iy2I219290kDqd3FbPsky0oA6hBqBw-t/preview', title:'Classroom of the Elite T2 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/1ZHYGhIvRt8c5li2l8mo_03LGE2RIZKff/preview', title:'Classroom of the Elite T2 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/1_V4cIgofxPLa2NTXqgwAtsBM5dPBnxKs/preview', title:'Classroom of the Elite T2 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/1-jq3NngpxqcLLJm4RaHe6XWdXcAdXh6d/preview', title:'Classroom of the Elite T2 Cap 12' },
+          "13": { link:'https://drive.google.com/file/d/1V4vMJQksyWyLbbkAkb3vSl-8IrR6BkrD/preview', title:'Classroom of the Elite T2 Cap 13' },
         },
         "3": {
-          "1": { link:'https://drive.google.com/file/d/1QHtfFPm6zB0Y5Yz3lKSoSeHA8C737naL/preview', title:'Classroom of the Elite T1 Cap 1' },
-          "2": { link:'https://drive.google.com/file/d/1JTWx9clEjZJxIn4-qNI2ytnY43D20iMl/preview', title:'Classroom of the Elite T1 Cap 2' },
-          "3": { link:'https://drive.google.com/file/d/17ep4rqYdo79pI_cHoyQOb_C-COTQ_r12/preview', title:'Classroom of the Elite T1 Cap 3' },
-          "4": { link:'https://drive.google.com/file/d/1HD28n-zxq0ZdO3h1acIrQJSXNkn7VIZR/preview', title:'Classroom of the Elite T1 Cap 4' },
-          "5": { link:'https://drive.google.com/file/d/1RvbM7TOl_fDOL6VNN4LvFd6pqRRpZfKo/preview', title:'Classroom of the Elite T1 Cap 5' },
-          "6": { link:'https://drive.google.com/file/d/1kg-eSvRA157LZByG6FwFF0RT1CqVy1Tt/preview', title:'Classroom of the Elite T1 Cap 6' },
-          "7": { link:'https://drive.google.com/file/d/1JUxlWiKecfj--9BfmRPNVApuqSyP7v_c/preview', title:'Classroom of the Elite T1 Cap 7' },
-          "8": { link:'https://drive.google.com/file/d/1PDMLcZhUnY_e11YIYe0qLfeZv1uPj3JQ/preview', title:'Classroom of the Elite T1 Cap 8' },
-          "9": { link:'https://drive.google.com/file/d/1IeM1LBsU5CanPw-80UGRhkuV0Rk93lKp/preview', title:'Classroom of the Elite T1 Cap 9' },
-          "10": { link:'https://drive.google.com/file/d/1wZC89YhIVsXve-IcBUT0Ha9IcaqgCr7q/preview', title:'Classroom of the Elite T1 Cap 10' },
-          "11": { link:'https://drive.google.com/file/d/1SuLDRMylTfs1ke_zOSYEDV6nYUVClVJv/preview', title:'Classroom of the Elite T1 Cap 11' },
-          "12": { link:'https://drive.google.com/file/d/1YzD4T1lx7OXoSW_8Zc_-2mCLPSf5JLma/preview', title:'Classroom of the Elite T1 Cap 12' },
-          "13": { link:'https://drive.google.com/file/d/1Uo5hAK4uAKGdeQBG5LARPCfrZ9YjkBaP/preview', title:'Classroom of the Elite T1 Cap 13' },
+          "1": { link:'https://drive.google.com/file/d/1QHtfFPm6zB0Y5Yz3lKSoSeHA8C737naL/preview', title:'Classroom of the Elite T3 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/1JTWx9clEjZJxIn4-qNI2ytnY43D20iMl/preview', title:'Classroom of the Elite T3 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/17ep4rqYdo79pI_cHoyQOb_C-COTQ_r12/preview', title:'Classroom of the Elite T3 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/1HD28n-zxq0ZdO3h1acIrQJSXNkn7VIZR/preview', title:'Classroom of the Elite T3 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1RvbM7TOl_fDOL6VNN4LvFd6pqRRpZfKo/preview', title:'Classroom of the Elite T3 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1kg-eSvRA157LZByG6FwFF0RT1CqVy1Tt/preview', title:'Classroom of the Elite T3 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1JUxlWiKecfj--9BfmRPNVApuqSyP7v_c/preview', title:'Classroom of the Elite T3 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1PDMLcZhUnY_e11YIYe0qLfeZv1uPj3JQ/preview', title:'Classroom of the Elite T3 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1IeM1LBsU5CanPw-80UGRhkuV0Rk93lKp/preview', title:'Classroom of the Elite T3 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/1wZC89YhIVsXve-IcBUT0Ha9IcaqgCr7q/preview', title:'Classroom of the Elite T3 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/1SuLDRMylTfs1ke_zOSYEDV6nYUVClVJv/preview', title:'Classroom of the Elite T3 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/1YzD4T1lx7OXoSW_8Zc_-2mCLPSf5JLma/preview', title:'Classroom of the Elite T3 Cap 12' },
+          "13": { link:'https://drive.google.com/file/d/1Uo5hAK4uAKGdeQBG5LARPCfrZ9YjkBaP/preview', title:'Classroom of the Elite T3 Cap 13' },
         }
       },
       "66": {
@@ -2791,19 +2796,19 @@
           "12": { link:'https://drive.google.com/file/d/1zh14T7VK5lYflFw4Czgmo-1yhvynY74G/preview', title:'Solo Leveling T1 Cap 12' },
         },
         "2": {
-          "1": { link:'https://drive.google.com/file/d/1NtGKNuwnvmYZIafzwbseqTAiMsKu2qug/preview', title:'Solo Leveling T1 Cap 1' },
-          "2": { link:'https://drive.google.com/file/d/18x7JD_5n-DBDMFfWAlzHkGWKRalQMi7p/preview', title:'Solo Leveling T1 Cap 2' },
-          "3": { link:'https://drive.google.com/file/d/1Zs22yqy2P1K-weH3ZyK9QAlT1FXu9XtV/preview', title:'Solo Leveling T1 Cap 3' },
-          "4": { link:'https://drive.google.com/file/d/15b9arlpzRlltbBC09zvSEPilPxIpxPVM/preview', title:'Solo Leveling T1 Cap 4' },
-          "5": { link:'https://drive.google.com/file/d/1wCiVa0-XsX8nvqMvPYhO6uyNdLAo7zMl/preview', title:'Solo Leveling T1 Cap 5' },
-          "6": { link:'https://drive.google.com/file/d/1YO5MwjFZemos-CehaUaGIXzJG7N64BIV/preview', title:'Solo Leveling T1 Cap 6' },
-          "7": { link:'https://drive.google.com/file/d/1OphXlnf-SoXjMQ1_iXyKvL8vsxk5H9Xk/preview', title:'Solo Leveling T1 Cap 7' },
-          "8": { link:'https://drive.google.com/file/d/1hnq3gDqz8aCyfPa8o5dV_kOs-MSvBrlT/preview', title:'Solo Leveling T1 Cap 8' },
-          "9": { link:'https://drive.google.com/file/d/1S8uLRmrO2spTFFuL4tcKgYGxIcS2KT6C/preview', title:'Solo Leveling T1 Cap 9' },
-          "10": { link:'https://drive.google.com/file/d/1kNXcHYBMDy4cnvJKRlahpDZ6G1qLAUq7/preview', title:'Solo Leveling T1 Cap 10' },
-          "11": { link:'https://drive.google.com/file/d/1zvYTFwzdsAkQbI8x5LaBTc1vQX22WyVw/preview', title:'Solo Leveling T1 Cap 11' },
-          "12": { link:'https://drive.google.com/file/d/1mvbPkuXMQwo94hxZFeIPymTJiTagTDmQ/preview', title:'Solo Leveling T1 Cap 12' },
-          "13": { link:'https://drive.google.com/file/d/1d6l0YJOHI3KRcdxp9JiJa7xYOfb6xVDy/preview', title:'Solo Leveling T1 Cap 13' },
+          "1": { link:'https://drive.google.com/file/d/1NtGKNuwnvmYZIafzwbseqTAiMsKu2qug/preview', title:'Solo Leveling T2 Cap 1' },
+          "2": { link:'https://drive.google.com/file/d/18x7JD_5n-DBDMFfWAlzHkGWKRalQMi7p/preview', title:'Solo Leveling T2 Cap 2' },
+          "3": { link:'https://drive.google.com/file/d/1Zs22yqy2P1K-weH3ZyK9QAlT1FXu9XtV/preview', title:'Solo Leveling T2 Cap 3' },
+          "4": { link:'https://drive.google.com/file/d/15b9arlpzRlltbBC09zvSEPilPxIpxPVM/preview', title:'Solo Leveling T2 Cap 4' },
+          "5": { link:'https://drive.google.com/file/d/1wCiVa0-XsX8nvqMvPYhO6uyNdLAo7zMl/preview', title:'Solo Leveling T2 Cap 5' },
+          "6": { link:'https://drive.google.com/file/d/1YO5MwjFZemos-CehaUaGIXzJG7N64BIV/preview', title:'Solo Leveling T2 Cap 6' },
+          "7": { link:'https://drive.google.com/file/d/1OphXlnf-SoXjMQ1_iXyKvL8vsxk5H9Xk/preview', title:'Solo Leveling T2 Cap 7' },
+          "8": { link:'https://drive.google.com/file/d/1hnq3gDqz8aCyfPa8o5dV_kOs-MSvBrlT/preview', title:'Solo Leveling T2 Cap 8' },
+          "9": { link:'https://drive.google.com/file/d/1S8uLRmrO2spTFFuL4tcKgYGxIcS2KT6C/preview', title:'Solo Leveling T2 Cap 9' },
+          "10": { link:'https://drive.google.com/file/d/1kNXcHYBMDy4cnvJKRlahpDZ6G1qLAUq7/preview', title:'Solo Leveling T2 Cap 10' },
+          "11": { link:'https://drive.google.com/file/d/1zvYTFwzdsAkQbI8x5LaBTc1vQX22WyVw/preview', title:'Solo Leveling T2 Cap 11' },
+          "12": { link:'https://drive.google.com/file/d/1mvbPkuXMQwo94hxZFeIPymTJiTagTDmQ/preview', title:'Solo Leveling T2 Cap 12' },
+          "13": { link:'https://drive.google.com/file/d/1d6l0YJOHI3KRcdxp9JiJa7xYOfb6xVDy/preview', title:'Solo Leveling T2 Cap 13' },
         }
       },
       "68": {
@@ -2816,6 +2821,17 @@
           "6": { link:'https://drive.google.com/file/d/1eyUQ3lQS8oVOgKdUgVeZJP7ETb1uP4n8/preview', title:'It - Bienvenidos a Derry T1 Cap 6' },
           "7": { link:'https://drive.google.com/file/d/1x245zGfkS59RoHqPtCnXCnOfEpvro9ss/preview', title:'It - Bienvenidos a Derry T1 Cap 7' },
           "8": { link:'https://drive.google.com/file/d/1B7coVAg2KnIluw7Dj53PQC3-hWiCvq_v/preview', title:'It - Bienvenidos a Derry T1 Cap 8' },
+        }
+      },
+      "69": {
+        "1": {
+          "1": { link:'https://drive.google.com/file/d/1S5pojtBClVB34_sFguRRk_B_4pcvkoKN/preview', title:'Cars Película 1' },
+        },
+        "2": {
+          "1": { link:'https://drive.google.com/file/d/1scE1xqNoWnQDGjRPHDR8AbL7l_X0_hWA/preview', title:'Cars Película 2' },
+        },
+        "3": {
+          "1": { link:'https://drive.google.com/file/d/1GOMOvEkGumhQO6pUgPw1BdhXc4lGJzE0/preview', title:'Cars Película 3' },
         }
       },
 
