--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
         <option>Post-apocalíptico</option>
         <option>Psicológico</option>
         <option>Reverse Harem</option>
+        <option>Road Movie</option>
         <option>Romance</option>
         <option>Romance escolar</option>
         <option>RPG</option>
@@ -357,7 +358,7 @@
       {id:11, title:"Maou 2099", img:"maou2099portada.avif", rating:4.7, genres:["Ciencia ficción","Isekai Inverso","Acción","Fantasía","Cyberpunk","Shōnen"]},
       {id:12, title:"Wistoria: Wand and Sword", img:"wistoria.avif", rating:4.8, genres:["Fantasía","Aventura","Shōnen"]},
       {id:13, title:"Izure Saikyou no Renkinjutsushi", aliases: ["Possibly the Greatest Alchemist of All Time"], img:"Izure.avif", rating:4.6, genres:["Aventura","Comedia","Fantasía","Isekai","Shōnen"]},
-      {id:14, title:"Alya Sometimes Hides Her Feelings in Russian", aliases: ["Tokidoki Bosotto Russia-go de Dereru Tonari no Alya-san"], img:"alia.avif", rating:4.8, genres:["Comedia","Romance","Romance escolar","Escolar","Josei"]},
+      {id:14, title:"Alya Sometimes Hides Her Feelings in Russian", aliases: ["Tokidoki Bosotto Russia-go de Dereru Tonari no Alya-san"], img:"alia.avif", rating:4.8, genres:["Comedia","Romance","Escolar","Josei"]},
       {id:15, title:"Reborn as a Vending Machine, I Now Wander the Dungeon", aliases: ["Jidōhanbaiki ni Umarekawatta Ore wa Meikyū ni Samayō"], img:"jidou.avif", rating:4.1, genres:["Fantasía","Isekai","Shōnen"]},
       {id:16, title:"kimi to boku no saigo no senjou", aliases: ["Our Last Crusade or the Rise of a New World"], img:"kimi22222.avif", rating:4.5, genres:["Acción","Fantasía","Romance","Militar","Seinen"]},
       {id:17, title:"The Gorilla God's Go- To Girl", aliases: ["Gorilla no Kami Kara Kago Sareta Reijō wa Ōritsu Kishidan de Kawaiigareru"], img:"gorila11.avif", rating:4.5, genres:["Fantasía","Comedia","Escolar","Romance","Shōjo"]},
@@ -412,6 +413,8 @@
       {id:66, title:"Frieren", aliases: ["Sōsō no Frieren"], img:"ff.avif", rating:4.9, genres:["Fantasía","Aventura","Drama","Shōnen"]},
       {id:67, title:"Solo leveling", aliases: ["Ore dake Level Up na Ken"], img:"sololeveling.avif", rating:4.9, genres:["Fantasía","Aventura","Acción","GameLit/LitRPG","RPG","Superhéroes","Isekai","Nekketsu","Shōnen"]},
       {id:68, title:"It - Bienvenidos a Derry", aliases: ["It - Welcome to Derry"], img:"it.avif", rating:4.9, genres:["Terror","Sobrenatural","Suspenso","Drama","Thriller","Seijin"]},
+      {id:69, title:"Cars", aliases: ["Rayo McQueen"], img:"cars.avif", rating:4.7, genres:["Infantil","Familiar","Aventura","Animación","Comedia","Acción","Road Movie","Deportivo","Kodomo"]},
+      {id:70, title:"Kimi to Koete Koi ni Naru", aliases: ["With You, Our Love Will Make It Through"], img:"kimitokoete.avif", rating:4.3, genres:["Comedia","Romance","Escolar","Slice of Life","Drama","Fantasía","Shōjo"]},
     ];
 
     /* ----------------------------
