--- a/anime-detail.html
+++ b/anime-detail.html
@@ -243,7 +243,7 @@
   <audio id="gih-ost" loop><source src="https://www.dropbox.com/scl/fi/ks7rvqfmw6lnyisdz07de/dfgdfg.mp3?rlkey=w76qkjl9t2yer2u9xwf8041v8&st=189sbps1&raw=1" type="audio/mpeg"></audio>
   <audio id="gnosia-ost" loop><source src="gnosia.mp3" type="audio/mpeg"></audio>
   <audio id="classroomelite-ost" loop><source src="classroomelite.mp3" type="audio/mpeg"></audio>
-  <audio id="frieren-ost" loop><source src="frieren.mp3" type="audio/mpeg"></audio>kimitokoete
+  <audio id="frieren-ost" loop><source src="frieren.mp3" type="audio/mpeg"></audio>
   <audio id="sololeveling-ost" loop><source src="sololeveling.mp3" type="audio/mpeg"></audio>
   <audio id="it-ost" loop><source src="it.mp3" type="audio/mpeg"></audio>
   <audio id="cars-ost" loop><source src="cars.mp3" type="audio/mpeg"></audio>
