--- a/anime-detail.html
+++ b/anime-detail.html
@@ -248,6 +248,7 @@
   <audio id="it-ost" loop><source src="it.mp3" type="audio/mpeg"></audio>
   <audio id="cars-ost" loop><source src="cars.mp3" type="audio/mpeg"></audio>
   <audio id="kimitokoete-ost" loop><source src="kimitokoete.mp3" type="audio/mpeg"></audio>
+  <audio id="overlord-ost" loop><source src="overlord.mp3" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -4030,7 +4031,97 @@
           }
         ]
       },
-
+      71: {
+        title: "Overlord",
+        desc: "Cuando un popular MMORPG anuncia su cierre definitivo, el veterano jugador Momonoga decide quedarse en él hasta el mismo cierre, sin salir. El problema es que pasa la horra de cierre y él no se desconecta, pero los NPC han ganado conciencia propia. ¿Está atrapado?",
+        cover: "overlord.avif",
+        seasons: [
+          {
+            num: 1,
+            cover: "overlord1.avif",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+              { title: "Capítulo 13"},
+            ]
+          },
+          {
+            num: 2,
+            cover: "overlord2.avif",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+              { title: "Capítulo 13"},
+            ]
+          },
+          {
+            num: 3,
+            cover: "overlord3.avif",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+              { title: "Capítulo 13"},
+            ]
+          },
+          {
+            num: 4,
+            cover: "overlord4.avif",
+            eps: [
+              { title: "Capítulo 1"},
+              { title: "Capítulo 2"},
+              { title: "Capítulo 3"},
+              { title: "Capítulo 4"},
+              { title: "Capítulo 5"},
+              { title: "Capítulo 6"},
+              { title: "Capítulo 7"},
+              { title: "Capítulo 8"},
+              { title: "Capítulo 9"},
+              { title: "Capítulo 10"},
+              { title: "Capítulo 11"},
+              { title: "Capítulo 12"},
+              { title: "Capítulo 13"},
+            ]
+          },
+          {
+            num: 5,
+	    name: "Película 1",
+            cover: "overlordp.avif",
+            eps: [
+              { title: "El Reino Sagrado"},
+            ]
+          }
+        ]
+      },
 
 
 
@@ -4250,6 +4341,7 @@
         68: ['it-ost'],
         69: ['cars-ost'],
         70: ['kimitokoete-ost'],
+        71: ['overlord-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
